k8s/manifests/service.yml
# apiVersion: v1
# kind: Service
# metadata:
#   name: goapplication-service
# spec:
#   selector:
#     app: goapplication
#   ports:
#     - protocol: TCP
#       port: 80 # Port that the service exposes
#       targetPort: 9090 # Port on the container
#       nodePort: 31000 # Choose a valid port within the range 30000-32767
#   type: NodePort
apiVersion: v1
kind: Service
metadata:
  name: goapplication-service
spec:
  selector:
    app: goapplication
  ports:
    - protocol: TCP
      port: 80 # The port the service will be exposed on
      targetPort: 9090 # The port the container listens on
  type: ClusterIP # Ingress expects ClusterIP service types
